--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next export"
+    "build": "next build && next export"
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
