--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/mdx": "^2.0.0-next.9",
     "@next/mdx": "^10.1.3",
     "multi-integer-range": "^4.0.8",
     "next": "10.1.3",
