--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prettier": "prettier ./ --write"
   },
   "dependencies": {
+    "@code-hike/mini-editor": "^0.3.0-next.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@next/mdx": "^10.1.3",
