--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prettier": "prettier ./ --write"
   },
   "dependencies": {
+    "@code-hike/mini-editor": "^0.3.0-next.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@next/mdx": "^10.1.3",
@@ -16,7 +17,8 @@
     "prism-react-renderer": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.31.1"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
