--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,10 @@
 {
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "overrides": [{
+    "files": "*.mdx",
+    "options": {
+      "printWidth": 60
+    }
+  }]
 }
