--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "prettier": "prettier ./ --write"
+    "prettier": "prettier \"./**/*.(js|ts|md|jsx|tsx|mdx)\" --write"
   },
   "dependencies": {
     "@code-hike/mini-editor": "^0.3.0-next.0",
