--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "prism-react-renderer": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-intersection-observer": "^8.31.1"
+    "react-intersection-observer": "^8.31.1",
+    "react-responsive": "^8.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
