--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@next/mdx": "^10.1.3",
     "multi-integer-range": "^4.0.8",
-    "next": "10.1.3",
+    "next": "^10.2.3",
     "prism-react-renderer": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
