working on content, reorganizing components of article

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,4 @@
 {
   "tabWidth": 2,
-  "useTabs": false,
-  "overrides": [
-    {
-      "files": "*.mdx",
-      "options": {
-        "printWidth": 60
-      }
-    }
-  ]
+  "useTabs": false
 }
