--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "prettier": "prettier \"./**/*.(js|ts|md|jsx|tsx|mdx)\" --write"
   },
   "dependencies": {
+    "@adobe/leonardo-contrast-colors": "^1.0.0-alpha.8",
     "@code-hike/mini-editor": "^0.3.0-next.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@next/mdx": "^10.1.3",
+    "hsluv": "^0.1.0",
     "multi-integer-range": "^4.0.8",
     "next": "^10.2.3",
     "prism-react-renderer": "^1.2.0",
