--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@next/mdx": "^10.1.3",
+    "@vanilla-extract/babel-plugin": "^1.0.1",
+    "@vanilla-extract/css": "^1.1.2",
+    "@vanilla-extract/webpack-plugin": "^1.0.3",
+    "css-loader": "^6.2.0",
     "hsluv": "^0.1.0",
+    "mini-css-extract-plugin": "^1.6.2",
     "multi-integer-range": "^4.0.8",
     "next": "^10.2.3",
     "prism-react-renderer": "^1.2.0",
