--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "hsluv": "^0.1.0",
     "mini-css-extract-plugin": "^1.6.2",
     "multi-integer-range": "^4.0.8",
-    "next": "^10.2.3",
+    "next": "^11.1.2",
     "prism-react-renderer": "^1.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.1",
     "react-responsive": "^8.2.0",
-    "vanilla-extract-plugin-nextjs": "0.0.5"
+    "vanilla-extract-plugin-nextjs": "^0.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
