--- a/package.json
+++ b/package.json
@@ -12,23 +12,22 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/mdx": "^2.0.0-next.9",
     "@next/mdx": "^10.1.3",
-    "@vanilla-extract/babel-plugin": "^1.0.1",
-    "@vanilla-extract/css": "^1.1.2",
+    "@vanilla-extract/babel-plugin": "^1.1.2",
+    "@vanilla-extract/css": "^1.6.3",
+    "@vanilla-extract/next-plugin": "^1.0.1",
     "@vanilla-extract/webpack-plugin": "^1.0.3",
     "css-loader": "^6.2.0",
     "hsluv": "^0.1.0",
-    "mini-css-extract-plugin": "^1.6.2",
     "multi-integer-range": "^4.0.8",
     "next": "^11.1.2",
     "prism-react-renderer": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.1",
-    "react-responsive": "^8.2.0",
-    "vanilla-extract-plugin-nextjs": "^0.3.2"
+    "react-responsive": "^8.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
-    "typescript": "^4.2.4"
+    "typescript": "^4.4.4"
   }
 }
