--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "dependencies": {
     "@code-hike/mini-editor": "^0.3.0-next.0",
     "@mdx-js/loader": "^1.6.22",
-    "@mdx-js/mdx": "^2.0.0-next.9",
-    "@next/mdx": "^10.1.3",
+    "@mdx-js/mdx": "^2.0.0-rc.1",
+    "@next/mdx": "^12.0.3",
     "@vanilla-extract/babel-plugin": "^1.1.2",
     "@vanilla-extract/css": "^1.6.3",
     "@vanilla-extract/next-plugin": "^1.0.1",
     "@vanilla-extract/webpack-plugin": "^1.0.3",
-    "css-loader": "^6.2.0",
+    "css-loader": "^6.5.1",
     "hsluv": "^0.1.0",
     "multi-integer-range": "^4.0.8",
-    "next": "^11.1.2",
+    "next": "^12.0.3",
     "prism-react-renderer": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
