--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.1",
-    "react-responsive": "^8.2.0"
+    "react-responsive": "^8.2.0",
+    "react-spring": "^9.5.5"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
