--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.31.1",
-    "react-responsive": "^8.2.0",
-    "react-spring": "^9.5.5"
+    "react-motion": "^0.5.2",
+    "react-responsive": "^8.2.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^17.0.3",
+    "@types/react-motion": "^0.0.33",
     "typescript": "^4.4.4"
   }
 }
