--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@vanilla-extract/next-plugin": "^1.0.1",
     "@vanilla-extract/webpack-plugin": "^1.0.3",
     "css-loader": "^6.5.1",
+    "debounce": "^1.2.1",
     "fast-myers-diff": "^3.0.1",
     "hsluv": "^0.1.0",
-    "lodash-es": "^4.17.21",
     "multi-integer-range": "^4.0.8",
     "next": "^12.0.3",
     "prism-react-renderer": "^1.2.0",
