--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "fast-myers-diff": "^3.0.1",
     "hsluv": "^0.1.0",
     "multi-integer-range": "^4.0.8",
-    "next": "^12.0.3",
+    "next": "^13.2.4",
     "prism-react-renderer": "^1.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-intersection-observer": "^8.31.1",
     "react-motion": "^0.5.2",
     "react-responsive": "^8.2.0"
@@ -33,6 +33,7 @@
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^17.0.3",
     "@types/react-motion": "^0.0.33",
+    "eslint-config-next": "^13.2.4",
     "typescript": "^4.4.4"
   }
 }
