--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@next/mdx": "^12.0.3",
     "@vanilla-extract/babel-plugin": "^1.1.2",
     "@vanilla-extract/css": "^1.6.3",
-    "@vanilla-extract/next-plugin": "^1.0.1",
+    "@vanilla-extract/next-plugin": "^2.1.1",
     "@vanilla-extract/webpack-plugin": "^1.0.3",
     "css-loader": "^6.5.1",
     "debounce": "^1.2.1",
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
+    "@types/node": "18.15.3",
     "@types/react": "^17.0.3",
     "@types/react-motion": "^0.0.33",
     "eslint-config-next": "^13.2.4",
